--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/biopython"]
 	path = lib/biopython
-	url = /home/ACCELERATION/nathan/projects/biopython
+	url = git://github.com/biopython/biopython.git
