Have pynpact being distributed with distutils, including the C code.
 * pynpact became pynpact/pynpact so that we had room for the setup.py file
 * added setup.py
 * move luciano-c/src/*.c into pynpact/src
 * added code to setup.py so that it would build the C files and copy them into the output directory so they will be distributed.

re Programming:#555 (0.75); re Programming:#537 (1.25)

--- a/pynpact/makefile
+++ b/pynpact/makefile
@@ -1,7 +1,7 @@
 
 SRCDIR = src
 OBJDIR = obj
-BINDIR = bin
+BINDIR = pynpact/bin
 
 SRC = $(shell find $(SRCDIR) | grep .c)
 OBJ = $(patsubst $(SRCDIR)/%.c, $(OBJDIR)/%.o, $(SRC))
