--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 lib/path.py-2.2.2.tar.gz
-lib/ordereddict-1.1.tar.gz
+#lib/ordereddict-1.1.tar.gz
+lib/flup-1.0.2.tar.gz
 lib/Django-1.3.tar.gz
 lib/django-mediagenerator-1.10.4.zip
 #lib/MySQL-python-1.2.3.tar.gz
