--- a/apache.conf
+++ b/apache.conf
@@ -14,3 +14,8 @@ RewriteRule ^/spat/raw/(.*) /home/accel/spat/webroot/uploads/$1
 ScriptAlias /spat/ /home/accel/spat/webroot/django.fcgi
 
 
+FcgidCmdOptions /home/accel/spat/webroot/django.fcgi \
+                IOTimeout=600 \
+                MaxRequestsPerProcess=1000 \
+                MaxProcesses=8 \
+                MinProcesses=2
