Fixing up a webconf a bit based on testing on progden, re #537 (0.25)

--- a/apache.conf
+++ b/apache.conf
@@ -9,13 +9,13 @@ LoadModule fcgid_module modules/mod_fcgid.so
     AddHandler fcgid-script .fcgi
 </directory>
 
-RewriteRule ^/spat/assets/(.*) /home/accel/spat/webroot/_generated_media/$1
-RewriteRule ^/spat/raw/(.*) /home/accel/spat/webroot/uploads/$1
-ScriptAlias /spat/ /home/accel/spat/webroot/django.fcgi
-
+RewriteEngine On
+RewriteRule ^/spat/assets/(.*) /home/accel/spat/webroot/_generated_media/$1 [L]
+RewriteRule ^/spat/raw/(.*) /home/accel/spat/webroot/uploads/$1 [L]
+RewriteRule ^/(spat/.*) /home/accel/spat/webroot/django.fcgi/$1 [L]
 
 FcgidCmdOptions /home/accel/spat/webroot/django.fcgi \
-                IOTimeout=600 \
-                MaxRequestsPerProcess=1000 \
-                MaxProcesses=8 \
-                MinProcesses=2
+                IOTimeout 600 \
+                MaxRequestsPerProcess 1000 \
+                MaxProcesses 8 \
+                MinProcesses 2
