Doing paths for publshing on progden.

--- a/apache.conf
+++ b/apache.conf
@@ -1,20 +1,25 @@
 
 LoadModule fcgid_module modules/mod_fcgid.so
 
-<directory /home/accel/spat/webroot>
+<directory /home/ACCELERATION/nathan/spat/webroot>
     order allow,deny
     allow from all
     FileETag None
     Options ExecCGI
     AddHandler fcgid-script .fcgi
 </directory>
+<location /spat>
+  satisfy any
+  allow from 10.201.35.0/24
+  allow from 216.155.103.30
+</location>
 
 RewriteEngine On
-RewriteRule ^/spat/assets/(.*) /home/accel/spat/webroot/_generated_media/$1 [L]
-RewriteRule ^/spat/raw/(.*) /home/accel/spat/webroot/uploads/$1 [L]
-RewriteRule ^/(spat/.*) /home/accel/spat/webroot/django.fcgi/$1 [L]
+RewriteRule ^/spat/assets/(.*) /home/ACCELERATION/nathan/spat/webroot/_generated_media/$1 [L]
+RewriteRule ^/spat/raw/(.*) /home/ACCELERATION/nathan/spat/webroot/uploads/$1 [L]
+RewriteRule ^/(spat/.*) /home/ACCELERATION/nathan/spat/webroot/django.fcgi/$1 [L]
 
-FcgidCmdOptions /home/accel/spat/webroot/django.fcgi \
+FcgidCmdOptions /home/ACCELERATION/nathan//spat/webroot/django.fcgi \
                 IOTimeout 600 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 8 \
