Got an automated publish script, corrected a bunch of paths.
Getting more stuff distributed through distutils (settings,
django.fcgi) which will make sure it is using the correct python
interpreter and settings is always on the path, so less path munging
there.

publish.sh should take care of uploading new version and making sure
the permissions get set correctly.

re Programming:#537 (1.5)

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-.svn
 build
 dist
 *~
 *#
 *.fasl
 .git
-_darcs
 bin
 obj
 *.pyc
@@ -15,3 +13,7 @@ ve
 .ropeproject
 a.out
 _generated_media_names.py
+_generated_media
+logs
+uploads
+development-bundle
