--- a/apache.conf
+++ b/apache.conf
@@ -5,16 +5,18 @@ LoadModule fcgid_module modules/mod_fcgid.so
     order allow,deny
     allow from all
     FileETag None
+</directory>
+
+<directory /home/accel/spat/ve/bin>
     Options ExecCGI
-    AddHandler fcgid-script .fcgi
 </directory>
 
 RewriteEngine On
 RewriteRule ^/spat/assets/(.*) /home/accel/spat/webroot/_generated_media/$1 [L]
 RewriteRule ^/spat/raw/(.*) /home/accel/spat/webroot/uploads/$1 [L]
-RewriteRule ^/(spat/.*) /home/accel/spat/webroot/django.fcgi/$1 [L]
+RewriteRule ^/(spat/.*) /home/accel/spat/ve/bin/django.fcgi/$1 [L,H=fcgid-script]
 
-FcgidCmdOptions /home/accel/spat/webroot/django.fcgi \
+FcgidCmdOptions /home/accel/spat/ve/bin/django.fcgi \
                 IOTimeout 600 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 8 \
