A few more tweaks to the publish config re Programming:#537 (0.25)

--- a/apache.conf
+++ b/apache.conf
@@ -1,13 +1,22 @@
 
-LoadModule fcgid_module modules/mod_fcgid.so
-
 <directory /home/accel/spat/webroot>
     order allow,deny
     allow from all
     FileETag None
+
+    <IfModule mod_header.c>
+        Header unset ETag
+        Header set Cache-Control "max-age=31536000, public"
+    </IfModule>
+
+    <IfModule mod_deflate.c>
+        AddOutputFilterByType DEFLATE text/html text/css text/csv application/x-javascript
+    </IfModule>
 </directory>
 
 <directory /home/accel/spat/ve/bin>
+    order allow,deny
+    allow from all
     Options ExecCGI
 </directory>
 
