Using different paths for the publish based on email back and forth with alberto re #537 (0.5)

--- a/apache.conf
+++ b/apache.conf
@@ -1,5 +1,4 @@
-
-<directory /home/accel/spat/webroot>
+<directory /var/www/html/genome.ufl.edu/spat/webroot>
     order allow,deny
     allow from all
     FileETag None
@@ -14,18 +13,18 @@
     </IfModule>
 </directory>
 
-<directory /home/accel/spat/ve/bin>
+<directory /var/www/html/genome.ufl.edu/spat/ve/bin>
     order allow,deny
     allow from all
-    Options ExecCGI
+    Options +FollowSymLinks +ExecCGI
 </directory>
 
 RewriteEngine On
-RewriteRule ^/spat/assets/(.*) /home/accel/spat/webroot/_generated_media/$1 [L]
-RewriteRule ^/spat/raw/(.*) /home/accel/spat/webroot/uploads/$1 [L]
-RewriteRule ^/(spat/.*) /home/accel/spat/ve/bin/django.fcgi/$1 [L,H=fcgid-script]
+RewriteRule ^/spat/assets/(.*) /var/www/html/genome.ufl.edu/spat/webroot/_generated_media/$1 [L]
+RewriteRule ^/spat/raw/(.*) /var/www/html/genome.ufl.edu/spat/webroot/uploads/$1 [L]
+RewriteRule ^/(spat/.*) /var/www/html/genome.ufl.edu/spat/ve/bin/django.fcgi/$1 [L,H=fcgid-script]
 
-FcgidCmdOptions /home/accel/spat/ve/bin/django.fcgi \
+FcgidCmdOptions /var/www/html/genome.ufl.edu/spat/ve/bin/django.fcgi \
                 IOTimeout 600 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 8 \
