--- a/logrotate.conf
+++ b/logrotate.conf
@@ -1,4 +1,4 @@
-/home/accel/spat/webroot/logs/*.log {
+/var/www/html/genome.ufl.edu/spat/webroot/logs/*.log {
         daily
         missingok
         rotate 21
