Try to get apache to zip postscript too.

--- a/apache.conf
+++ b/apache.conf
@@ -9,7 +9,7 @@
     </IfModule>
 
     <IfModule mod_deflate.c>
-        AddOutputFilterByType DEFLATE text/html text/css text/csv application/x-javascript
+        AddOutputFilterByType DEFLATE text/html text/css text/csv application/x-javascript application/postscript
     </IfModule>
 </directory>
 
