Setting up two process pools in apache configuration
By having two process pools we avoid multiple analyses taking up all
the workers leaving nothing for the rest of the website.

The split is mostly just having two copies of the fcgi entry point and
instructing apache to treat them as different pools.

--- a/apache.conf
+++ b/apache.conf
@@ -22,10 +22,19 @@
 RewriteEngine On
 RewriteRule ^/spat/assets/(.*) /var/www/html/genome.ufl.edu/spat/webroot/_generated_media/$1 [L]
 RewriteRule ^/spat/raw/(.*) /var/www/html/genome.ufl.edu/spat/webroot/uploads/$1 [L]
-RewriteRule ^/(spat/.*) /var/www/html/genome.ufl.edu/spat/ve/bin/django.fcgi/$1 [L,H=fcgid-script]
+RewriteRule ^/(spat/process/.*) /var/www/html/genome.ufl.edu/spat/ve/bin/django-process.fcgi/$1 [L,H=fcgid-script]
+RewriteRule ^/(spat/.*) /var/www/html/genome.ufl.edu/spat/ve/bin/django-main.fcgi/$1 [L,H=fcgid-script]
 
-FcgidCmdOptions /var/www/html/genome.ufl.edu/spat/ve/bin/django.fcgi \
+#heavy processing pool
+FcgidCmdOptions /var/www/html/genome.ufl.edu/spat/ve/bin/django-process.fcgi \
                 IOTimeout 600 \
+                MaxRequestsPerProcess 1000 \
+                MaxProcesses 16 \
+                MinProcesses 1
+
+#basic webpage pool
+FcgidCmdOptions /var/www/html/genome.ufl.edu/spat/ve/bin/django-main.fcgi \
+                IOTimeout 90 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 8 \
                 MinProcesses 2
