Rebranding spat->npact

--- a/apache.conf
+++ b/apache.conf
@@ -1,4 +1,4 @@
-<directory /var/www/html/genome.ufl.edu/spat/webroot>
+<directory /var/www/html/genome.ufl.edu/npact/webroot>
     order allow,deny
     allow from all
     FileETag None
@@ -13,27 +13,31 @@
     </IfModule>
 </directory>
 
-<directory /var/www/html/genome.ufl.edu/spat/ve/bin>
+<directory /var/www/html/genome.ufl.edu/npact/ve/bin>
     order allow,deny
     allow from all
     Options +FollowSymLinks +ExecCGI
 </directory>
 
 RewriteEngine On
-RewriteRule ^/spat/assets/(.*) /var/www/html/genome.ufl.edu/spat/webroot/_generated_media/$1 [L]
-RewriteRule ^/spat/raw/(.*) /var/www/html/genome.ufl.edu/spat/webroot/uploads/$1 [L]
-RewriteRule ^/(spat/process/.*) /var/www/html/genome.ufl.edu/spat/ve/bin/django-process.fcgi/$1 [L,H=fcgid-script]
-RewriteRule ^/(spat/.*) /var/www/html/genome.ufl.edu/spat/ve/bin/django-main.fcgi/$1 [L,H=fcgid-script]
+RewriteRule ^/spat(.*) /npact$1 [R=301,L]
+RewriteRule ^/npact$ /npact/ [R=301,L]
+RewriteRule ^/npact/ - [E=nokeepalive:1]
+
+RewriteRule ^/npact/assets/(.*) /var/www/html/genome.ufl.edu/npact/webroot/_generated_media/$1 [L]
+RewriteRule ^/npact/raw/(.*) /var/www/html/genome.ufl.edu/npact/webroot/uploads/$1 [L]
+RewriteRule ^/(npact/process/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django-process.fcgi/$1 [L,H=fcgid-script]
+RewriteRule ^/(npact/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django-main.fcgi/$1 [L,H=fcgid-script]
 
 #heavy processing pool
-FcgidCmdOptions /var/www/html/genome.ufl.edu/spat/ve/bin/django-process.fcgi \
+FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django-process.fcgi \
                 IOTimeout 600 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 16 \
                 MinProcesses 1
 
 #basic webpage pool
-FcgidCmdOptions /var/www/html/genome.ufl.edu/spat/ve/bin/django-main.fcgi \
+FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django-main.fcgi \
                 IOTimeout 90 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 8 \
