Fixup apache.conf
 * Better documentation
 * compress application/pdf now that we serve it
 * only set nokeepalive on django requests.

--- a/apache.conf
+++ b/apache.conf
@@ -4,12 +4,16 @@
     FileETag None
 
     <IfModule mod_header.c>
+        #the system we're using makes every media/js/style reference
+        #unique: new version have a new name. Hence set caching to
+        #bigvalue.
+
         Header unset ETag
         Header set Cache-Control "max-age=31536000, public"
     </IfModule>
 
     <IfModule mod_deflate.c>
-        AddOutputFilterByType DEFLATE text/html text/css text/csv application/x-javascript application/postscript
+        AddOutputFilterByType DEFLATE text/html text/css text/csv application/x-javascript application/postscript application/pdf
     </IfModule>
 </directory>
 
@@ -20,14 +24,19 @@
 </directory>
 
 RewriteEngine On
+#redirect from old url to new
 RewriteRule ^/spat(.*) /npact$1 [R=301,L]
+#fix missing trailing slash on root url.
 RewriteRule ^/npact$ /npact/ [R=301,L]
-RewriteRule ^/npact/ - [E=nokeepalive:1]
 
+#serve static files directly through apache.
 RewriteRule ^/npact/assets/(.*) /var/www/html/genome.ufl.edu/npact/webroot/_generated_media/$1 [L]
 RewriteRule ^/npact/raw/(.*) /var/www/html/genome.ufl.edu/npact/webroot/uploads/$1 [L]
-RewriteRule ^/(npact/process/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django-process.fcgi/$1 [L,H=fcgid-script]
-RewriteRule ^/(npact/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django-main.fcgi/$1 [L,H=fcgid-script]
+
+#Django recommends disabling keepalive; so add the nokeepalive env variable on those requests.
+
+RewriteRule ^/(npact/process/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django-process.fcgi/$1 [L,H=fcgid-script,E=nokeepalive:1]
+RewriteRule ^/(npact/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django-main.fcgi/$1 [L,H=fcgid-script,E=nokeepalive:1]
 
 #heavy processing pool
 FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django-process.fcgi \
@@ -36,7 +45,7 @@ FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django-process.fcgi \
                 MaxProcesses 16 \
                 MinProcesses 1
 
-#basic webpage pool
+#other pages pool
 FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django-main.fcgi \
                 IOTimeout 90 \
                 MaxRequestsPerProcess 1000 \
