--- a/apache.conf
+++ b/apache.conf
@@ -35,18 +35,11 @@ RewriteRule ^/npact/raw/(.*) /var/www/html/genome.ufl.edu/npact/webroot/uploads/
 
 #Django recommends disabling keepalive; so add the nokeepalive env variable on those requests.
 
-RewriteRule ^/(npact/process/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django-process.fcgi/$1 [L,H=fcgid-script,E=nokeepalive:1]
-RewriteRule ^/(npact/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django-main.fcgi/$1 [L,H=fcgid-script,E=nokeepalive:1]
+RewriteRule ^/(npact/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django.fcgi/$1 [L,H=fcgid-script,E=nokeepalive:1]
 
-#heavy processing pool
-FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django-process.fcgi \
-                IOTimeout 600 \
-                MaxRequestsPerProcess 1000 \
-                MaxProcesses 16 \
-                MinProcesses 1
 
 #other pages pool
-FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django-main.fcgi \
+FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django.fcgi \
                 IOTimeout 90 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 8 \
