Framework for management page.
Auth will be really basic (require valid-user) done by apache; nothing
beyond that.

--- a/apache.conf
+++ b/apache.conf
@@ -23,6 +23,14 @@
     Options +FollowSymLinks +ExecCGI
 </directory>
 
+<location /npact/management>
+    require valid-user
+    authtype basic
+    authuserfile /var/www/html/genome.ufl.edu/npact/.htpasswd
+    AuthName "NPACT Management console"
+</location>
+
+
 RewriteEngine On
 #redirect from old url to new
 RewriteRule ^/spat(.*) /npact$1 [R=301,L]
