--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,8 @@ lib/django-mediagenerator-1.10.4.zip
 lib/setproctitle-1.1.6.tar.gz
 lib/lockfile-0.9.1.tar.gz
 lib/python-daemon-1.5.5.tar.gz
-
 lib/numpy-1.6.1.tar.gz
--e lib/biopython/
+lib/biopython-1.60.tar.gz
 
 -e pynpact/
 -e taskqueue/
