Rework the makefile somewhat
We can now specify custom build options for particular binaries (like
the ones that need libm).

Also started util.c that gets built into an object linked into some of
the binaries, but doesn't produce its own binary.

--- a/pynpact/makefile
+++ b/pynpact/makefile
@@ -1,5 +1,5 @@
 FLAGS = -ggdb
-ENDFLAGS= -lm   #it doesn't work unless this is a the end of the command line.
+ENDFLAGS=  #it doesn't work unless this is a the end of the command line.
 SRCDIR = src
 OBJDIR = obj
 BINDIR = pynpact/bin
@@ -7,23 +7,36 @@ CC = gcc
 
 SRC = $(shell find $(SRCDIR) | grep .c)
 OBJ = $(patsubst $(SRCDIR)/%.c, $(OBJDIR)/%.o, $(SRC))
-PROGS = $(patsubst $(SRCDIR)/%.c, $(BINDIR)/%, $(SRC))
+_PROGS = acgt_gamma AG Allplots atg extract gtg nprofile stops ttg
+PROGS = $(patsubst %,$(BINDIR)/%,$(_PROGS))
 
-.PHONEY: all clean init
+DEPS = $(shell find $(SRCDIR) | grep .h)
+DEPSO = $(pathsubs %,$(OBJDIR)/%.o,$(_DEPS))
 
-all: clean init $(PROGS)
+.PHONY: all clean init
+
+all: init $(PROGS)
 clean:
 	rm -rf $(OBJDIR) $(BINDIR)
 
 init:
-	mkdir $(OBJDIR) $(BINDIR)
-	$(foreach DIR, $(patsubst $(SRCDIR)/%, $(OBJDIR)/%, $(shell find $(SRCDIR)/* -type d)), mkdir $(DIR))
+	mkdir -p $(OBJDIR) $(BINDIR)
 
-$(APPNAME): init $(OBJ)
-	$(CC) $(FLAGS) -o $(BINDIR)/$(APPNAME) $(OBJ)
-
-$(OBJDIR)/%.o: $(SRCDIR)/%.c
+#A general rule of make an object file for any C file, rebuild if the
+#corresponding C file changes or any of the include files change
+$(OBJDIR)/%.o: $(SRCDIR)/%.c $(DEPS)
 	$(CC) $(FLAGS) -c $< -o $@
 
+
+#Link acgt_gamma if the object file changes include lib m
+$(BINDIR)/acgt_gamma: $(OBJDIR)/acgt_gamma.o
+	$(CC) $(FLAGS) -o $@ $^  -lm
+
+#Allplots needs util and lib m
+$(BINDIR)/Allplots: $(OBJDIR)/Allplots.o $(OBJDIR)/util.o
+	$(CC) $(FLAGS) -o $@ $^  -lm
+
+#anything else can be linked with just its own object file.
 $(BINDIR)/%: $(OBJDIR)/%.o
-	$(CC) $(FLAGS) -o $@ $<  $(ENDFLAGS)
+	$(CC) $(FLAGS) -o $@ $^  $(ENDFLAGS)
+
