ui: ignore build artifacts
refs Programming:#735

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ logs
 uploads
 development-bundle
 webroot
+/npactweb/.tmp/templates.js
+/npactweb/node_modules/grunt-newer/.cache/html2js/main/timestamp
