--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -1,26 +1,27 @@
 {
-    "name": "npactweb",
-    "version": "0.0.0",
-    "authors": [
-	"Nathan Bird <nathan@acceleration.net>",
-	"Ryan Davis <ryan@acceleration.net>"
-    ],
-    "description": "analyzes and renders genomes",
-    "license": "private",
-    "private": true,
-    "ignore": [
-	"**/.*",
-	"node_modules",
-	"bower_components",
-	"npactweb/static/bower_components",
-	"test",
-	"tests"
-    ],
-    "dependencies": {
-	"angular": "1.3.0-beta.11",
-	"kineticjs": "~5.1.0"
-    },
-    "devDependencies": {
-	"angular-mocks": "1.3.0-beta.11"
-    }
+  "name": "npactweb",
+  "version": "0.0.0",
+  "authors": [
+    "Nathan Bird <nathan@acceleration.net>",
+    "Ryan Davis <ryan@acceleration.net>"
+  ],
+  "description": "analyzes and renders genomes",
+  "license": "private",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "npactweb/static/bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": "1.3.0-beta.11",
+    "kineticjs": "~5.1.0",
+    "lodash": "~2.4.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.3.0-beta.11"
+  }
 }
