--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ lib/django-mediagenerator-1.11.zip
 lib/setproctitle-1.1.8.tar.gz
 lib/lockfile-0.9.1.tar.gz
 lib/python-daemon-1.5.5.tar.gz
-lib/numpy-1.6.1.tar.gz
+#lib/numpy-1.6.1.tar.gz
 lib/biopython-1.63-extradtds.tar.gz
 -e pynpact/
 -e taskqueue/
