`grunt jshint` lints the JS source

--- a/npactweb/.jshintrc
+++ b/npactweb/.jshintrc
@@ -1,25 +1,15 @@
 {
   "browser": true,
-  "esnext": true,
-  "bitwise": true,
-  "camelcase": true,
-  "curly": true,
-  "eqeqeq": true,
-  "immed": true,
   "indent": 2,
-  "latedef": "nofunc",
-  "newcap": false,
-  "noarg": true,
-  "quotmark": "single",
-  "regexp": true,
-  "undef": true,
-  "unused": true,
-  "strict": true,
-  "trailing": true,
-  "smarttabs": true,
+  "latedef": true,
+  "unused": "vars",
+  "jasmine": true,
   "globals": {
     "angular": false,
     "jQuery": false,
-    "_": false
+    "_": false,
+    "module": false,
+    "inject": false
+
   }
 }
