--- a/npactweb/package.json
+++ b/npactweb/package.json
@@ -1,19 +1,21 @@
 {
-    "name": "npactweb",
-    "version": "0.0.0",
-    "devDependencies": {
-	"grunt": "~0.4.5",
-	"karma": "~0.12.16",
-	"karma-jasmine": "~0.1.5",
-	"load-grunt-tasks": "~0.4.0",
-	"grunt-karma": "~0.8.3",
-	"karma-phantomjs-launcher": "~0.1.4",
-	"grunt-html2js": "~0.2.7",
-	"karma-spec-reporter": "0.0.13",
-	"grunt-newer": "~0.7.0"
-    },
-    "scripts": {
-	"test": "grunt test"
-    },
-    "readmeFilename": "README.md"
+  "name": "npactweb",
+  "version": "0.0.0",
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "karma": "~0.12.16",
+    "karma-jasmine": "~0.1.5",
+    "load-grunt-tasks": "~0.4.0",
+    "grunt-karma": "~0.8.3",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "grunt-html2js": "~0.2.7",
+    "karma-spec-reporter": "0.0.13",
+    "grunt-newer": "~0.7.0",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-jshint": "~0.10.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "readmeFilename": "README.md"
 }
