--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -17,11 +17,14 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.3.0-beta.11",
+    "angular": "1.3.1",
     "kineticjs": "~5.1.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "ngInfiniteScroll": "~1.1.2",
+    "qtip2": "~2.2.1",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.0-beta.11"
+    "angular-mocks": "1.3.1"
   }
 }
