--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -22,7 +22,8 @@
     "lodash": "~2.4.1",
     "ngInfiniteScroll": "~1.1.2",
     "qtip2": "~2.2.1",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-messages": "~1.3.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3.1"
