bower install rtree
spatial index, there are a few libs but this had a very easy API

refs #864 (.125)

--- a/npactweb/.jshintrc
+++ b/npactweb/.jshintrc
@@ -9,7 +9,7 @@
     "jQuery": false,
     "_": false,
     "module": false,
-    "inject": false
-
+    "inject": false,
+    "RTree": false
   }
 }
