--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -23,7 +23,8 @@
     "ngInfiniteScroll": "~1.1.2",
     "qtip2": "~2.2.1",
     "jquery": "~1.11.1",
-    "angular-messages": "~1.3.1"
+    "angular-messages": "~1.3.1",
+    "rtree": "~1.4.2"
   },
   "devDependencies": {
     "angular-mocks": "1.3.1"
