--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -17,15 +17,15 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.3.1",
+    "angular": "~1.3.0",
     "kineticjs": "~5.1.0",
     "lodash": "~2.4.1",
     "qtip2": "~2.2.1",
     "jquery": "~1.11.1",
-    "angular-messages": "~1.3.1",
+    "angular-messages": "~1.3.0",
     "rtree": "~1.4.2"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.1"
+    "angular-mocks": "~1.3.0"
   }
 }
