--- a/npactweb/package.json
+++ b/npactweb/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.5",
-    "karma": "~0.12.16",
-    "karma-jasmine": "~0.1.5",
-    "load-grunt-tasks": "~0.4.0",
-    "grunt-karma": "~0.8.3",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "grunt-html2js": "~0.2.7",
-    "karma-spec-reporter": "0.0.13",
-    "grunt-newer": "~0.7.0",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-jshint": "~0.10.0",
-    "karma-junit-reporter": "~0.2.2"
+    "grunt-html2js": "~0.2.7",
+    "grunt-karma": "^0.9.0",
+    "grunt-newer": "~0.8.0",
+    "jasmine-core": "^2.1.3",
+    "karma": "~0.12.16",
+    "karma-jasmine": "~0.3.0",
+    "karma-junit-reporter": "~0.2.2",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-spec-reporter": "0.0.16",
+    "load-grunt-tasks": "~2.0.0"
   },
   "scripts": {
     "test": "grunt test"
