--- a/npactweb/package.json
+++ b/npactweb/package.json
@@ -14,7 +14,8 @@
     "karma-junit-reporter": "~0.2.2",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-spec-reporter": "0.0.16",
-    "load-grunt-tasks": "~2.0.0"
+    "load-grunt-tasks": "~2.0.0",
+    "karma-ng-html2js-preprocessor": "~0.1.2"
   },
   "repository": {
     "type": "git",
