--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -18,11 +18,12 @@
   ],
   "dependencies": {
     "angular": "~1.3.0",
+    "angular-messages": "~1.3.0",
+    "angular-sanitize": "~1.3.8",
     "kineticjs": "~5.1.0",
     "lodash": "~2.4.1",
     "qtip2": "~2.2.1",
     "jquery": "~2.1.0",
-    "angular-messages": "~1.3.0",
     "rtree": "~1.4.2"
   },
   "devDependencies": {
