--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -24,7 +24,8 @@
     "lodash": "~3.0.0",
     "qtip2": "~2.2.1",
     "jquery": "~2.1.0",
-    "rtree": "~1.4.2"
+    "rtree": "~1.4.2",
+    "jquery-ui": "~1.11.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
