--- a/npactweb/package.json
+++ b/npactweb/package.json
@@ -8,7 +8,7 @@
     "grunt-html2js": "~0.2.7",
     "grunt-karma": "^0.10.0",
     "grunt-newer": "~0.8.0",
-    "jasmine-core": "^2.1.3",
+    "jasmine-core": "~2.2.0",
     "karma": "~0.12.16",
     "karma-jasmine": "~0.3.0",
     "karma-junit-reporter": "~0.2.2",
