--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -25,7 +25,8 @@
     "qtip2": "~2.2.1",
     "jquery": "~2.1.0",
     "rtree": "~1.4.2",
-    "jquery-ui": "~1.11.2"
+    "jquery-ui": "~1.11.2",
+    "angular-jquery-dialog-service": "~0.8.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
