--- a/npactweb/bower.json
+++ b/npactweb/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.4.0",
     "angular-messages": "~1.4.0",
     "angular-sanitize": "~1.4.0",
+    "angular-cookies": "~1.4.0",
     "konva": ">=0.9",
     "lodash": "~3.7.0",
     "qtip2": "~2.2.1",
