Change Npactweb to Npactflask
All references in these files to npactweb were changed to npactflask
because npactweb is the application in django and in a completely
different folder while npactflask uses flask and should be the project
that this refers to.

re #915

--- a/npactflask/bower.json
+++ b/npactflask/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "npactweb",
+  "name": "npactflask",
   "version": "0.0.0",
   "authors": [
     "Nathan Bird <nathan@acceleration.net>",
@@ -12,7 +12,7 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "npactweb/static/bower_components",
+    "npactflask/static/bower_components",
     "test",
     "tests"
   ],
