--- a/npactflask/apache.conf
+++ b/npactflask/apache.conf
@@ -48,7 +48,7 @@ RewriteRule ^/(npact/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django.fcgi/$
 
 #other pages pool
 #TODO: Fix for flask
-FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django.fcgi \
+FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/flask.fcgi \
                 IOTimeout 90 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 8 \
