--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-lib/path.py-2.4.1.zip
 lib/flup-1.0.2.tar.gz
 lib/setproctitle-1.1.8.tar.gz
-lib/lockfile-0.9.1.tar.gz
-lib/python-daemon-1.5.5.tar.gz
-#lib/numpy-1.6.1.tar.gz
+#We've amended this gzip with extra DTDs
 lib/biopython-1.63-extradtds.tar.gz
+path.py==7.4
+lockfile==0.10.2
+python-daemon==2.0.5
 flask==0.10
 Flask-Mail
 pytz
