Fix flask and apache to work with eachother

--- a/apache.conf
+++ b/apache.conf
@@ -47,7 +47,7 @@ RewriteRule ^/(npact/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django.fcgi/$
 
 
 #other pages pool
-FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/django.fcgi \
+FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/flask.fcgi \
                 IOTimeout 90 \
                 MaxRequestsPerProcess 1000 \
                 MaxProcesses 8 \
