Translate: use data from server
Instead of uploading the sequence to translate, reference the path on
the server.

--- a/npactflask/.jshintrc
+++ b/npactflask/.jshintrc
@@ -5,6 +5,7 @@
   "unused": "vars",
   "eqeqeq": true,
   "jasmine": true,
+  "newCap": false,
   "globals": {
     "angular": false,
     "jQuery": false,
