--- a/apache.conf
+++ b/apache.conf
@@ -1,34 +1,6 @@
-<directory /var/www/html/genome.ufl.edu/npact/webroot>
-    order allow,deny
-    allow from all
-    FileETag None
-
-    <IfModule mod_header.c>
-        #the system we're using makes every media/js/style reference
-        #unique: new version have a new name. Hence set caching to
-        #bigvalue.
-
-        Header unset ETag
-        Header set Cache-Control "max-age=31536000, public"
-    </IfModule>
-
-    <IfModule mod_deflate.c>
-        AddOutputFilterByType DEFLATE text/html text/css text/csv application/x-javascript application/postscript application/pdf
-    </IfModule>
-</directory>
-
-<directory /var/www/html/genome.ufl.edu/npact/ve/bin>
-    order allow,deny
-    allow from all
-    Options +FollowSymLinks +ExecCGI
-</directory>
-
-<location /npact/management>
-    require valid-user
-    authtype basic
-    authuserfile /var/www/html/genome.ufl.edu/npact/.htpasswd
-    AuthName "NPACT Management console"
-</location>
+<Directory /var/www/html/genome.ufl.edu/npact/>
+    Order Allow,Deny
+</Directory>
 
 
 RewriteEngine On
@@ -37,18 +9,33 @@ RewriteRule ^/spat(.*) /npact$1 [R=301,L]
 #fix missing trailing slash on root url.
 RewriteRule ^/npact$ /npact/ [R=301,L]
 
-#serve static files directly through apache.
-RewriteRule ^/npact/assets/(.*) /var/www/html/genome.ufl.edu/npact/webroot/_generated_media/$1 [L]
+
+<location /npact/management>
+    Require valid-user
+    AuthType basic
+    AuthUserFile /var/www/html/genome.ufl.edu/npact/.htpasswd
+    AuthName "NPACT Management console"
+</location>
+
+
+<Directory /var/www/html/genome.ufl.edu/npact/webroot/uploads>
+    Order Deny,Allow
+    Allow From All
+    FileETag None
+    <IfModule mod_header.c>
+        #the system we're using makes every media/js/style reference
+        #unique: new version have a new name. Hence set caching to
+        #bigvalue.
+        Header unset ETag
+        Header set Cache-Control "max-age=31536000, public"
+    </IfModule>
+    <IfModule mod_deflate.c>
+        SetOutputFilter DEFLATE
+    </IfModule>
+</Directory>
+
+
+
 RewriteRule ^/npact/raw/(.*) /var/www/html/genome.ufl.edu/npact/webroot/uploads/$1 [L]
-
-#Django recommends disabling keepalive; so add the nokeepalive env variable on those requests.
-
-RewriteRule ^/(npact/.*) /var/www/html/genome.ufl.edu/npact/ve/bin/django.fcgi/$1 [L,H=fcgid-script,E=nokeepalive:1]
-
-
-#other pages pool
-FcgidCmdOptions /var/www/html/genome.ufl.edu/npact/ve/bin/flask.fcgi \
-                IOTimeout 90 \
-                MaxRequestsPerProcess 1000 \
-                MaxProcesses 8 \
-                MinProcesses 2
+#Proxy other requests to backend gunicorn instance
+RewriteRule ^(/npact/.*) http://localhost:5000$1 [P,L]
