--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@
 lib/biopython-1.63-extradtds.tar.gz
 
 path.py==7.4
-flask==0.10
-gevent==1.0.2
-gunicorn==19.3.0
-pytz
+flask==0.10.1
+Flask-Mail==0.9.1
+blinker==1.4
+gevent>=1.1rc1
+supervisor>=3.1.3
 -e pynpact/
 -e npactflask/
