--- a/npactflask/package.json
+++ b/npactflask/package.json
@@ -6,16 +6,17 @@
     "grunt-cli": "~0.1.13",
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-html2js": "~0.3.0",
-    "grunt-karma": "^0.10.0",
+    "grunt-karma": "^0.12.1",
     "grunt-newer": "~1.1.0",
-    "jasmine-core": "~2.2.0",
-    "karma": "~0.12.16",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.15",
     "karma-jasmine": "~0.3.0",
-    "karma-junit-reporter": "~0.2.2",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-spec-reporter": "0.0.19",
-    "load-grunt-tasks": "~3.1.0",
-    "karma-ng-html2js-preprocessor": "~0.1.2"
+    "karma-junit-reporter": "^0.3.8",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-spec-reporter": "0.0.22",
+    "load-grunt-tasks": "^3.3.0",
+    "phantomjs": "^1.9.18"
   },
   "repository": {
     "type": "git",
