--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ path.py==7.4
 flask==0.10.1
 Flask-Mail==0.9.1
 blinker==1.4
-gevent>=1.1rc1
+gevent>=1.1
 supervisor>=3.1.3
 -e pynpact/
 -e npactflask/
